# MARS-VINS

./: CMakeLists.txt  package.xml
config/: camchain-imucam-euroc.yaml  euroc_config.txt
core/include/core/: ros_wrapper.h
example_program/: ros_wrapper.cpp  vins_example_ros.cpp
launch/: mars_vins.launch
